[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryos"
version = "0.1.0"
description = "Drop-in persistent memory layer for AI agents — Neo4j/Memgraph Knowledge Graph + Redis STM"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["ai", "agents", "memory", "knowledge-graph", "neo4j", "memgraph", "langchain", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "neo4j>=5.0",
    "redis>=5.0",
    "pydantic>=2.0",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "langgraph-checkpoint-redis>=0.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai     = ["openai>=1.0"]
groq       = ["groq>=0.11"]
anthropic  = ["anthropic>=0.40"]
gemini     = ["google-generativeai>=0.8"]
ollama     = ["requests>=2.31"]
litellm    = ["litellm>=1.40"]
all = [
    "openai>=1.0",
    "groq>=0.11",
    "anthropic>=0.40",
    "google-generativeai>=0.8",
    "requests>=2.31",
    "litellm>=1.40",
]

[project.urls]
Homepage      = "https://github.com/BurhanHussain1/memoryos-ai-agents"
Documentation = "https://github.com/BurhanHussain1/memoryos-ai-agents#readme"
Repository    = "https://github.com/BurhanHussain1/memoryos-ai-agents"
Issues        = "https://github.com/BurhanHussain1/memoryos-ai-agents/issues"
Changelog     = "https://github.com/BurhanHussain1/memoryos-ai-agents/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["memoryos*"]
exclude = ["examples*", "tests*", "venv*"]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["venv", "examples", "tests/integration"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = [
    "E501",   # line-too-long — handled by formatter
    "B008",   # function calls in defaults (used for RunnableConfig=None)
    "RUF012", # mutable class default (Pydantic models)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "integration: requires live Neo4j + Redis (set MEMORYOS_RUN_INTEGRATION=1)",
]
asyncio_mode = "auto"
addopts = "-ra"
